# AutonomousBoat

./: .gitignore  DEPLOY.md  EG25G-GPS.md  README.md  boat-firmware.service  camera-stream.service  camera_stream.py  check_can.py  check_gps.py  check_ina228.py  check_ssd1306.py  cpu_load.py  debug_i2c.py  listen_can.py  read_imu.py  read_ina228.py  read_temp.py  reset_ssd1306.py  setup.md  ssd1306-dashboard.service  ssd1306.py  ssd1306_shutdown.py  toggle_all_gpios.py  toggle_gpio21.py
dashboard/: index.html  package.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: Boat3DView.tsx  BoatDiagramPanel.tsx  BoatStatePanel.tsx  CameraView.tsx  ImuPanel.tsx  LakeView3D.tsx  MapView.tsx  PowerPanel.tsx  Sidebar.tsx  StatusBar.tsx  TelemetryPanel.tsx  TeleopOverlay.tsx  ThermalPanel.tsx  index.ts
dashboard/src/context/: NavigationContext.tsx
dashboard/src/hooks/: useBoatMqtt.ts
dashboard/src/types/: index.ts
firmware/: Cargo.toml  Dockerfile
firmware/.cargo/: config.toml
firmware/src/: bus.rs  bus_sim.rs  config.rs  main.rs  mqtt.rs  sim_world.rs  types.rs
firmware/src/drivers/: bno055.rs  ina228.rs  mcp2515.rs  mod.rs  tmp1075.rs
firmware/src/tasks/: can.rs  display.rs  gps.rs  imu.rs  mod.rs  motor.rs  nav.rs  power.rs  thermal.rs
simulator/: index.html  package.json
simulator/src/: main.ts  mqtt-subscriber.ts  renderer.ts  types.ts
